# codephoto

./: .gitignore  README.md  app.py  bot.py  calc_coefficient.py  delete_dupes.sh  gendotenv.py  pyproject.toml  test_webcam.py
highlighter/: __init__.py  formatter.py  impl.py
templates/: image.html  input.html  not_found.html
uploader/: __init__.py  impl.py
