[tool.poetry]
name = "codephoto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^12.0.0"
gunicorn = "^23.0.0"
flask = "^3.1.2"
flask-wtf = "^1.2.2"
opencv-python = "^4.12.0.88"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
